This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

18-Apr-2004 (Lars Duening)  (3.3.523)
  - (func_spec, sha1, efuns) New efun sha1() (provided by Fippo -
       thanks!).
  - (func_spec, files.c) Efun write_file() can now be instructed to
        delete the file first (suggested by Pulami).

18-Apr-2004 (Lars Duening)  (3.3.522)
  - (interpret.c) F_RETURN now takes care to undo a pending SAVE_ARG_FRAME.
       This situation can happen in a closure like ({#'sprintf, "%O",
       ({#'return, 1 }) }) (reported by Risky).

18-Apr-2004 (Lars Duening)  (3.3.521)
  - (prolang.y, func_spec, interpret.c) The default return inserted for
       value returning functions (in case the programmer forgets about
       it) now generates a runtime warning so that such code can be found
       and corrected. This applies only for functions with specified return
       type - old type functions don't generate a warning (suggested by
       Heiko).

15-Apr-2004 (Lars Duening)  (3.3.520)
  - (func_spec, array, simulate) Efun unique_array() can now use
       a closure as separator function, and also pass extra arguments
       (suggested by Shinarae).

14-Apr-2004 (Lars Duening)  (3.3.519)
  - (prolang.y) I had to restrict '&(struct->member)' to a single level
       of member lookup because the compiler generated invalid code.

13-Apr-2004 (Lars Duening)  (3.3.518)
  - (sprintf.c) Made the code portable to non-32-bit machines.
  - (test/t-040413) Added a testcase for two struct lookup issues.

13-Apr-2004 (Lars Duening)  (3.3.517)
  - (sprintf.c) Format '%b' to print a number in binary notation (supplied
       by Ralph - thanks!).

13-Apr-2004 (Lars Duening)  (3.3.516)
  - (func_spec, prolang.y, interpret.c) I had to back out the recent change
       as it interfered with the use of bitflags. We need a proper unsigned
       type for this kind of thing.

12-Apr-2004 (Lars Duening)  (3.3.515)