@@ -7,31 +7,40 @@ DESCRIPTION
         actions, and a lot of hook implementations still follow this
         tradition.
 
-        The main purpose of this function is to set up the
-        add_actions() of an object. Therefore init() will always be
-        called when an object moves near another object and one or
-        both of them are marked as living.
+        The main purpose of this function is to publish the commands
+        an object implements to other, living objects. Traditionally,
+        whenever a living object enters the vicinity of another
+        object, init() is called in the latter and this_player() will
+        point to the former object. This happens mutually should both
+        objects happen to be living.
 
-        The way init() will be invoked is determined in the following
-        manner:
+        Or more formally:
 
-        If the object O that moves is marked as living then first call
-        init() of the destination object D with this_player() set to O.
+            If the object O that moves is marked as living then first
+            call init() of the destination object D with this_player()
+            set to O.
 
-        Then apply the two following rules for each object C inside D:
+            Then apply the two following rules for each object C
+            inside D:
 
-                If C is marked as living then call O->init() with
-                this_player() set to C.
+                    If C is marked as living then call O->init() with
+                    this_player() set to C.
 
-                If O is marked as living then call C->init() with
-                this_player() set to O.
+                    If O is marked as living then call C->init() with
+                    this_player() set to O.
 
-        Finally, if D is marked as living then call O->init(), with
-        this_player() set to D.
+            Finally, if D is marked as living then call O->init(),
+            with this_player() set to D.
 
-        With 3.2.1, the actual move handling became part of the object
-        library, so a given installation may implement any other
-        scheme of calling init().
+        Starting with 3.2.1, the actual move handling became part of the
+        object library, so a given installation may implement any other scheme
+        of calling init().
+
+        One caveat: commands defined in the player object for the player
+        himself should not be defined in init(), as these commands would be
+        added to _other_ players whenever they happen to be nearby. Instead
+        use a separate function ("add_player_commands()" or so) which
+        is called during the creation of the player.
 
 EXAMPLE
         (This example assumes a traditional implementation of the
