@@ -10,18 +10,6 @@ DESCRIPTION
         the efun or at least performs some security checks.
         It is easy to undermine a mudlibs security using this efun.
 
-        The efun is available only in 3.2.1, a possible simulation for
-        3.2 could be:
-
-          void set_this_player(object ob)
-          {
-            /* Insert your privilege checks here */
-            if (living(ob))
-              funcall(bind_lambda(#'enable_commands, ob));
-          }
-
-        (suggested by Mark Lewis (Nostradamus@Zebedee))
-
 HISTORY
         Introduced in 3.2.1.
         LDMud 3.2.6 added the value 0 as acceptable parameter.
