@@ -55,7 +55,7 @@
 #define CLOSURE_SIMUL_EFUN      (0xf800)
 
 #define CLOSURE_IS_LFUN(x)		(((x)&~1) == 0)
-#define CLOSURE_IS_IDENTIFIER(x)	((x) == CLOSURE_IDENTFIER)
+#define CLOSURE_IS_IDENTIFIER(x)	((x) == CLOSURE_IDENTIFIER)
 #define CLOSURE_IS_BOUND_LAMBDA(x)	((x) == CLOSURE_BOUND_LAMBDA)
 #define CLOSURE_IS_LAMBDA(x)		((x) == CLOSURE_LAMBDA)
 #define CLOSURE_IS_UNBOUND_LAMBDA(x)	((x) == CLOSURE_UNBOUND_LAMBDA)
